Styling (NONE) small footer alignment fixes

--- a/source/_patterns/02-organisms/00-global/01-footer.scss
+++ b/source/_patterns/02-organisms/00-global/01-footer.scss
@@ -90,7 +90,7 @@
     margin-top: 0.75em;
 
     @media only screen and (min-width : $breakpointDesktop) {
-      margin-top : 2.375em;
+      margin-top : 2.47em;
     }
   }
 
